# tricorder

./: AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: ContinuousMetrics.ipynb  OxygenDeliveryExample.ipynb  RespiratoryQuotient.ipynb  Untitled.ipynb  cohort.ipynb  preprocess_swan.ipynb  preprocess_tavr.ipynb  src
tests/: __init__.py  test_cohort.py  test_outcome_metrics.py  test_table.py  test_tricorder.py
tricorder/: .travis.yml  __init__.py  cli.py  codesets_ICD10.py  cohort.py  cohort_metrics.py  dashboard.py  elixhauser.py  monitors.py  outcome_metrics.py  outcome_utils.py  outcomes.py  preprocessing.py  procedure_codesets.py  reece.py  swan.py  tables.py  tavr.py  utils.py
tricorder/.github/: ISSUE_TEMPLATE.md
tricorder/datasets/: __init__.py  compass.py  compass_raw.py  swan.py  tavr.py
tricorder/datasets/compass/: __init__.py  flowsheet.py  monitors.py  preprocessing.py  procedure_codesets.py  tables.py  utils.py
